{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 49,
  "lineage": "e4b7b5ba-f831-83bb-7181-e48f45526f17",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:security-group/sg-009d03c11dbff1d7b",
            "description": "Security group for EKS cluster control plane",
            "egress": [],
            "id": "sg-009d03c11dbff1d7b",
            "ingress": [],
            "name": "dev-market-impact-eks-cluster-sg-20251027112716303100000006",
            "name_prefix": "dev-market-impact-eks-cluster-sg-",
            "owner_id": "388762879261",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-market-impact-eks-cluster-sg",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-market-impact-eks-cluster-sg",
              "Project": "market-impact-analysis"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:security-group/sg-0b3ff442d1f2ce7e4",
            "description": "Security group for EKS worker nodes",
            "egress": [],
            "id": "sg-0b3ff442d1f2ce7e4",
            "ingress": [],
            "name": "dev-market-impact-eks-node-sg-20251027112716299300000005",
            "name_prefix": "dev-market-impact-eks-node-sg-",
            "owner_id": "388762879261",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-market-impact-eks-node-sg",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-market-impact-eks-node-sg",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-264381618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-009d03c11dbff1d7b",
            "security_group_rule_id": "sgr-0242f7aba1dfc3420",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-684034146",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-009d03c11dbff1d7b",
            "security_group_rule_id": "sgr-020e60919fdfac199",
            "self": false,
            "source_security_group_id": "sg-0b3ff442d1f2ce7e4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_workstation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1895123848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-009d03c11dbff1d7b",
            "security_group_rule_id": "sgr-07146509852213aae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-588045925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b3ff442d1f2ce7e4",
            "security_group_rule_id": "sgr-0086a41762cb290f4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 0,
            "id": "sgrule-1937911787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b3ff442d1f2ce7e4",
            "security_group_rule_id": "sgr-0fb69955e3f659f5c",
            "self": false,
            "source_security_group_id": "sg-009d03c11dbff1d7b",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-66549823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b3ff442d1f2ce7e4",
            "security_group_rule_id": "sgr-09f957d64c9d35c34",
            "self": false,
            "source_security_group_id": "sg-009d03c11dbff1d7b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-188203297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b3ff442d1f2ce7e4",
            "security_group_rule_id": "sgr-0a2dcd536191e66d1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.networking.aws_cloudwatch_log_group.flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.flow_logs",
            "module.networking.aws_iam_role_policy.flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.database",
            "module.networking.aws_route_table.private",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.database",
            "module.networking.aws_route_table_association.private",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.database",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1dd02e446267e7c",
            "arn": "arn:aws:ec2:us-east-1:388762879261:elastic-ip/eipalloc-0a1dd02e446267e7c",
            "domain": "vpc",
            "id": "eipalloc-0a1dd02e446267e7c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-0-33-88.compute-1.amazonaws.com",
            "public_ip": "52.0.33.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-eip-1",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-eip-1",
              "Project": "market-impact-analysis"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:internet-gateway/igw-02ae0faee8eca60b3",
            "id": "igw-02ae0faee8eca60b3",
            "owner_id": "388762879261",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-igw",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-igw",
              "Project": "market-impact-analysis"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1dd02e446267e7c",
            "association_id": "eipassoc-04082bceea15f51e0",
            "connectivity_type": "public",
            "id": "nat-06d3103352a1d90f8",
            "network_interface_id": "eni-0a200cb2a248259d7",
            "private_ip": "10.2.0.233",
            "public_ip": "52.0.33.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e702d1b6b98e213f",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-1",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-nat-1",
              "Project": "market-impact-analysis"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:route-table/rtb-066c77f2f530ae28b",
            "id": "rtb-066c77f2f530ae28b",
            "owner_id": "388762879261",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-rt",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-rt",
              "Project": "market-impact-analysis"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:route-table/rtb-067a5eb5ae544ed2f",
            "id": "rtb-067a5eb5ae544ed2f",
            "owner_id": "388762879261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d3103352a1d90f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-rt-1",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-rt-1",
              "Project": "market-impact-analysis"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:route-table/rtb-0eac45266771c562d",
            "id": "rtb-0eac45266771c562d",
            "owner_id": "388762879261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ae0faee8eca60b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-rt",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-rt",
              "Project": "market-impact-analysis"
            },
            "timeouts": null,
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b2dec36174b3abc",
            "route_table_id": "rtb-066c77f2f530ae28b",
            "subnet_id": "subnet-05dd2bc34b72323d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.database",
            "module.networking.aws_subnet.database",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db34372fc87345a3",
            "route_table_id": "rtb-066c77f2f530ae28b",
            "subnet_id": "subnet-09d0c38e76aea89a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.database",
            "module.networking.aws_subnet.database",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03275f7a2bedaad71",
            "route_table_id": "rtb-066c77f2f530ae28b",
            "subnet_id": "subnet-081d40b220d70ce42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.database",
            "module.networking.aws_subnet.database",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ab9a26aa77c2ca",
            "route_table_id": "rtb-067a5eb5ae544ed2f",
            "subnet_id": "subnet-0c3a7feec4ec7754c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05918af2196aaa89d",
            "route_table_id": "rtb-067a5eb5ae544ed2f",
            "subnet_id": "subnet-08596e52f365634e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8134efedb465500",
            "route_table_id": "rtb-067a5eb5ae544ed2f",
            "subnet_id": "subnet-0da9f4dd7fbf2fc71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020ba085e28ea7b60",
            "route_table_id": "rtb-0eac45266771c562d",
            "subnet_id": "subnet-0e702d1b6b98e213f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be3565d00004e51e",
            "route_table_id": "rtb-0eac45266771c562d",
            "subnet_id": "subnet-0835e6368dbe1810d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e47b75be519e6f3",
            "route_table_id": "rtb-0eac45266771c562d",
            "subnet_id": "subnet-0d8544115e92a3bd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-05dd2bc34b72323d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dd2bc34b72323d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-us-east-1a",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-us-east-1a",
              "Project": "market-impact-analysis"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-09d0c38e76aea89a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d0c38e76aea89a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-us-east-1b",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-us-east-1b",
              "Project": "market-impact-analysis"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-081d40b220d70ce42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d40b220d70ce42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-us-east-1c",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-database-us-east-1c",
              "Project": "market-impact-analysis"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-0c3a7feec4ec7754c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3a7feec4ec7754c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-us-east-1a",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-us-east-1a",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-08596e52f365634e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08596e52f365634e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-us-east-1b",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-us-east-1b",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-0da9f4dd7fbf2fc71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da9f4dd7fbf2fc71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-us-east-1c",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-private-us-east-1c",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-0e702d1b6b98e213f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e702d1b6b98e213f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-us-east-1a",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-us-east-1a",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-0835e6368dbe1810d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0835e6368dbe1810d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-us-east-1b",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-us-east-1b",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:subnet/subnet-0d8544115e92a3bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8544115e92a3bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "388762879261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-us-east-1c",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-public-us-east-1c",
              "Project": "market-impact-analysis",
              "kubernetes.io/cluster/dev-market-impact-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008a3e610885c4c8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:388762879261:vpc/vpc-008a3e610885c4c8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0b4e8c9ce8e1bf8b3",
            "default_route_table_id": "rtb-051049b19e1713ad5",
            "default_security_group_id": "sg-01b9e9440c070c98f",
            "dhcp_options_id": "dopt-055a20e48bb4f8059",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008a3e610885c4c8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051049b19e1713ad5",
            "owner_id": "388762879261",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "market-impact-analysis"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "dev-vpc",
              "Project": "market-impact-analysis"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}